# tentanator

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cluster.py  README.md  clustering.py  combine_moodle_dumps.py  docker-compose.yml  embeddings.py  make_excel.py  openai_trainer.py  process_global.py  requirements.txt  sampling.py  search_question.py  tentanator.py  test_sampling.py  test_visualization.py  workspace.py
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  detect.rs  domain.rs  error.rs  global_bank.rs  grade.rs  llm.rs  main.rs  moodle.rs  routes.rs  sampling.rs  scheme.rs  scheme_text.rs  store.rs  workspace.rs
results-renderer/: Dockerfile  renderer.py  requirements.txt  server.py
scripts/: check_api_parity.py
tui/: Dockerfile  README.md  api.py  app.py  requirements.txt
web/: .cta.json  .dockerignore  .env.example  .gitignore  Dockerfile  components.json  package-lock.json  package.json
web/src/: routeTree.gen.ts  styles.css
web/src/components/: ExamNav.tsx  PageShell.tsx
web/src/components/ui/: accordion.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  (+8 more)
web/src/hooks/: use-toast.ts
web/src/lib/: api.ts
web/src/routes/: __root.tsx  combine.tsx  exam.$name.import.tsx  exam.$name.index.tsx  exam.$name.pdf.tsx  exam.$name.results.tsx  exam.$name.scheme.tsx  exam.$name.table.tsx  exam.$name.tsx  global-bank.tsx  index.tsx  new.tsx  session.$name.import.tsx  session.$name.pdf.tsx  session.$name.results.tsx  session.$name.scheme.tsx  session.$name.tsx
