[package]
name = "tentanator-backend"
version = "0.1.0"
edition = "2021"
description = "Tentanator grading model + HTTP API (Axum)"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
calamine = "0.26"
rust_xlsxwriter = "0.79"
csv = "1"
turso = "0.4"

[profile.dev]
opt-level = 0
